Complete first iteration
This is now a working (hopefully) prototype.